Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9
-
None
-
f88e6497c (dev), a780d8d25 (6.8)
Description
Nested functions break dom.
import QtQuick Item { width: 34 // Component.onCompleted: { // test function a() { return 45;} } }
Attachments
For Gerrit Dashboard: QTBUG-130349 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
600797,2 | dom: don't crash on lambdas inside of script blocks | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
601229,2 | dom: don't crash on lambdas inside of script blocks | 6.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |