dom: don't crash on lambdas inside of script blocks

Treat script blocks like potential methods, such that a lambda inside a
script block is recognized to be a lambda instead of a QML object
method.
This fixes a crash where a scriptbinding was bound to lambda.

Pick-to: 6.8
Fixes: QTBUG-130349
Change-Id: Id38f36115b90feb1feb07971eaa8c6b47295850c
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>